--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+
+        <h1>Hello, I'm Jackson</h1>
+        <img src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="My Avatar">
+
     </body>
 </html>
