made format changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </nav>
 
         <h1>Hello, I'm Jackson</h1>
-        <img src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="My Avatar">
-
+        
+        <p>
+            <img style="border-radius: 20%; float: left; margin-right: 1em;" src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="My Avatar">
+            This is where I describe myself. Give a general overview of my career goal / purpose. Whatever you think should be on the general website.
+        </p>
     </body>
 </html>
